...
    val interactions = interactionLog.interactions
    val pendingQuestion = interactionLog.pendingQuestion
    val listState = rememberLazyListState()
    val scope = rememberCoroutineScope()

    LazyColumn(
        modifier = modifier.testTag("interaction_list"),
        verticalArrangement = Arrangement.spacedBy(8.dp),
        state = listState,
    ) {
        // сначала отображаем пару анимированных глаз
        countedItem(canBeAnchor = false) {
            AnimatedEyes(state = eyesState)
...
